--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.node.json"
+  "include": ["vite-env.d.ts", "src/**/*", "src/**/*.vue"],
+  "extends": "./tsconfig.app.json",
+  "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"]
     }
-  ]
+  },
+  "lib": ["ES2015", "DOM"] // add ES2015 here
 }
