--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
+    "@vue/tsconfig": "^0.5.1",
     "axios": "^1.7.2",
     "pinia": "^2.1.7",
     "sass": "^1.77.8",
-    "vue": "^3.4.31"
+    "vue": "^3.4.31",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "typescript": "^5.2.2",
     "vite": "^5.3.4",
+    "vite-tsconfig-paths": "^4.3.2",
     "vue-tsc": "^2.0.24"
   }
 }
