--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@pinia/nuxt": "^0.5.1",
     "@vue/tsconfig": "^0.5.1",
     "axios": "^1.7.2",
+    "fuse.js": "^7.0.0",
     "pinia": "^2.1.7",
     "sass": "^1.77.8",
     "vue": "^3.4.31",
